force-app/main/default/objects/Krow__Slack_Integration__c/Krow__Slack_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for holding slack integration information</description>
    <label>Slack Integration</label>
</CustomObject>