force-app/main/default/objects/Krow__Slack_Integration__c/fields/Krow__Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Krow__Access_Token__c</fullName>
    <description>Access Token after authentication between Salesforce and Slack.</description>
    <label>Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>