force-app/main/default/objects/Krow__Slack_Integration__c/fields/Krow__Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Krow__Client_ID__c</fullName>
    <description>Client Id of Slack App.</description>
    <label>Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>