force-app/main/default/objects/Krow__Slack_Integration__c/fields/Krow__Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Krow__Client_Secret__c</fullName>
    <description>Client Secret of Slack App.</description>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>