force-app/main/default/objects/Krow__Slack_Integration__c/fields/Krow__Enable_Slack_Integration__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Slack_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check, if wants to create a channel in slack for a project(create).</description>
    <label>Enable Slack Integration</label>
    <type>Checkbox</type>
</CustomField>